# journal-rss-rater

./: .env  .gitignore  LICENSE  README.md  TODO.md  pyproject.toml
backend/: config.py  crons.py  database.py  logger.py  main.py  models.py  rss.py
backend/auth/: httpdigest.py
backend/config/: default.yml  logging.yml  rss.yml
backend/rater/: req_openai_compat.py
backend/tests/: test_feedparser.py  test_models.py  test_rater.py
frontend/: index.html  package.json
frontend/src/: App.vue  main.ts
frontend/src/components/: RSSSources.vue  RSSTable.vue  StarRate.vue
frontend/src/datamodels/: RSSItem.ts
shell/: build_frontend.sh  export_openapi.sh  journal-rss-rater.service
